salesforce/force-app/main/default/objects/Consultation_Note__c/Consultation_Note__c.object-meta.xml
<CustomObject>
    <label>Consultation Note</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultation Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>