salesforce/force-app/main/default/objects/Consultation_Note__c/fields/Captured_By__c.field-meta.xml
<CustomField>
    <fullName>Captured_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Captured By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Consultation_Notes_Captured</relationshipName>
    <type>Lookup</type>
</CustomField>