salesforce/force-app/main/default/objects/Consultation_Note__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consultation Notes</relationshipLabel>
    <relationshipName>Consultation_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>