salesforce/force-app/main/default/objects/Consultation_Note__c/fields/Note_Text__c.field-meta.xml
<CustomField>
    <fullName>Note_Text__c</fullName>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>