salesforce/force-app/main/default/objects/Consultation_Note__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <label>Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Observation</fullName><default>false</default><label>Observation</label></value>
            <value><fullName>Preference</fullName><default>false</default><label>Preference</label></value>
            <value><fullName>Concern</fullName><default>false</default><label>Concern</label></value>
            <value><fullName>Recommendation</fullName><default>false</default><label>Recommendation</label></value>
            <value><fullName>Follow-up</fullName><default>false</default><label>Follow-up</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>