salesforce/force-app/main/default/objects/Consultation_Note__c/fields/Products_Referenced__c.field-meta.xml
<CustomField>
    <fullName>Products_Referenced__c</fullName>
    <label>Products Referenced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>