salesforce/force-app/main/default/objects/Consultation_Note__c/fields/Store_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Store_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Appointment</label>
    <referenceTo>Store_Appointment__c</referenceTo>
    <relationshipLabel>Consultation Notes</relationshipLabel>
    <relationshipName>Consultation_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>